--- a/index.html
+++ b/index.html
@@ -58,34 +58,32 @@
                     <img src="https://img.freepik.com/vetores-premium/conceito-de-design-de-logotipo-agricola_761413-7954.jpg?semt=ais_hybrid&w=740" class="rounded-pill" width="300" height="200" loading="cover">
                 </div>
                 <div class="col-5">
-                    <h2>Conexão Campo Cidade</h2>
-                    <p class="p-2">A conexão campo-cidade é um tema central para entender a dinâmica de qualquer sociedade, especialmente no Brasil. 
-                        Ela se refere à interdependência e às diversas formas de interação que existem entre as áreas rurais (campo) e as áreas urbanas (cidade).
-                         Longe de serem entidades separadas,campo e cidade estão em constante diálogo e se influenciam mutuamente de diversas maneiras. 
-                                       <li>Fluxo de Informação e Cultura: Ideias, tendências culturais e informações circulam entre os dois ambientes, moldando hábitos e visões de mundo tanto no campo quanto na cidade.</li>
-                                       <li>Fluxo de Alimentos: O mais evidente é o abastecimento das cidades com produtos agrícolas provenientes do campo. Desde grãos e carnes até frutas e vegetais, a vida urbana depende diretamente da produção rural.</li>
-                                       <li>Fluxo de Mão de Obra: Historicamente, o campo tem sido uma fonte de mão de obra para as cidades, impulsionando o processo de urbanização. 
-                                        Pessoas migram em busca de melhores oportunidades de emprego, educação e serviços.</li>
-                                       <li>Fluxo de Capital e Tecnologia: As cidades, como centros econômicos e tecnológicos, fornecem ao campo investimentos,
-                                         maquinário agrícola, insumos (fertilizantes, sementes), serviços financeiros e inovações que modernizam a produção rural.</li>
-                                       <li>Fluxo de Serviços e Bens: Moradores do campo frequentemente buscam nas cidades acesso a serviços especializados (saúde, educação superior), 
-                                        comércio varejista diversificado e bens de consumo que não estão disponíveis em suas regiões..</li>                   </p>
+                    <h2>IA-Inteligência Artificial</h2>
+                    <p class="p-2">A Inteligência Artificial (IA) refere-se à capacidade de sistemas computacionais simularem funções cognitivas humanas, como aprendizado, 
+                        raciocínio, percepção e resolução de problemas. Em outras palavras, a IA busca criar máquinas capazes de realizar tarefas que normalmente 
+                        exigiriam inteligência humana. Isso inclui desde tarefas simples, como responder a perguntas, até tarefas complexas, como dirigir carros autônomos. 
+                        A IA é um campo amplo que engloba diversas tecnologias e abordagens. Alguns dos principais conceitos e tecnologias associadas à IA incluem:  
+                                       <li>Aprendizado de máquina (Machine Learning):
+Um ramo da IA que permite que os sistemas aprendam com dados sem programação explícita, identificando padrões e fazendo previsões. 
+</li>
+                                       <li>Deep learning:
+Uma técnica de aprendizado de máquina que utiliza redes neurais artificiais com múltiplas camadas para analisar dados complexos, como imagens e textos.</li>
+                                       <li>Processamento de linguagem natural (PNL):
+Permite que computadores entendam e processem a linguagem humana, tanto escrita quanto falada. </li>
+                                       <li>Visão computacional:
+Habilita os computadores a "enxergar" e interpretar imagens, como reconhecimento facial e análise de imagens médicas. 
+</li>
+                                            </p>
                                         
-                    <h2>Impactos da Conexão Campo-Cidade a intensidade e a natureza dessa conexão geram uma série de impactos:</h2>
-                                    <li>Desenvolvimento Econômico: A prosperidade de um geralmente impulsiona a do outro. Uma agricultura forte contribui para a economia urbana (indústrias de processamento, transporte), 
-                                        e cidades dinâmicas oferecem mercados para produtos rurais.</li>
-                                        <li>Transformações Sociais: A migração do campo para a cidade (êxodo rural) provoca mudanças significativas na estrutura demográfica de ambos os ambientes, 
-                                            levando a desafios como o inchaço urbano e o envelhecimento da população rural.</li>
-                                            <li>Questões Ambientais: A demanda urbana por recursos naturais impacta o campo (desmatamento para agricultura, uso da água), e a poluição 
-                                                gerada nas cidades pode afetar as áreas rurais vizinhas.</li>
-                                                <li>Desigualdades: Apesar da interdependência, muitas vezes há um desequilíbrio nessa relação, com a cidade concentrando poder político e econômico, 
-                                                    o que pode levar à marginalização ou exploração do campo.</li>
-                                                    <li>Dinâmicas Culturais: A interação entre as duas realidades gera uma fusão e, por vezes, um choque de valores, tradições e modos de vida.</li> 
-                    <h2>A Conexão no Contexto Brasileiro</h2> 
-                                                    <li>No Brasil, a conexão campo-cidade é particularmente marcante devido ao rápido processo de urbanização que o país vivenciou a partir do século XX. O agronegócio, por exemplo, é uma força motriz econômica que conecta profundamente o campo à cidade (centros de exportação, indústrias de beneficiamento). Ao mesmo tempo, a busca por qualidade de vida e acesso a serviços ainda impulsiona fluxos migratórios, embora hoje também se observe um movimento inverso de pessoas buscando o campo por tranquilidade ou atividades ligadas ao turismo rural.
-
-Compreender a conexão campo-cidade é fundamental para o planejamento territorial, o desenvolvimento de políticas públicas eficientes e a construção de um futuro mais equilibrado e sustentável para o Brasil.</li>
-
+                    <h2>Exemplos de aplicações de IA: 
+</h2>
+                                    <li>Assistentes virtuais (Siri, Alexa).
+</li>
+                                        <li>Recomendação de produtos em plataformas de e-commerce.</li>
+                                            <li>Sistemas de reconhecimento facial em dispositivos e segurança.</li>
+                                                <li>Carros autônomos.</li>
+                                                    <li>Diagnóstico médico por meio de imagens.</h2> 
+                                                
                 </div>
             </div>
         </section>
