--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@ Habilita os computadores a "enxergar" e interpretar imagens, como reconhecimento
             </div>
         </section>
 
-        <section id="galeria" tabindex="0" aria-label="Seção de galeria de imagens">
+        <section id="galeria de exemplos" tabindex="0" aria-label="Seção de galeria de imagens">
             <h2 class="text-center pt-5">Galeria</h2>
             <div class="container p-3 mt-3 fundo-galeria ">
 
