--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
         <section id="tropicalia" class="my-5 pt-6 secao-tropicalia" tabindex="0" aria-label="Seção explicativa sobre a tropicália">
             <div class="container d-flex align-items-center ">
                 <div class="col-4 d-flex justify-content-center ">
-                    <img src="https://img.freepik.com/vetores-premium/conceito-de-design-de-logotipo-agricola_761413-7954.jpg?semt=ais_hybrid&w=740" class="rounded-pill" width="300" height="200" loading="cover">
+                    <img src="https://static.vecteezy.com/ti/vetor-gratis/p1/11837178-carta-ia-logotipo-modelo-gratis-gratis-gratis-vetor.jpg" class="rounded-pill" width="300" height="200" loading="cover">
                 </div>
                 <div class="col-5">
                     <h2>IA-Inteligência Artificial</h2>
